--- a/index.html
+++ b/index.html
@@ -13,19 +13,32 @@
             background-color: lightblue;
             display: block;
         }
-        .banner {
+        .game-info {
+            position: absolute;
+            top: 10px;
+            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            position: absolute;
-            top: 0;
-            width: 100%;
+            padding: 0 15px;
             z-index: 1;
+            font-size: 18px;
+            color: black;
         }
-        .settings-menu, .game-over-screen {
+        .settings-button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .settings-button:hover {
+            background-color: #0056b3;
+        }
+        .settings-menu, .game-over-screen, .start-screen {
             display: none;
             position: absolute;
             top: 50%;
@@ -36,9 +49,11 @@
             padding: 20px;
             border-radius: 10px;
             z-index: 2;
-            width: 200px;
-            height: 200px;
             text-align: center;
+        }
+        .start-screen {
+            width: %; /* 4x4 size on the screen */
+            height: 25%;
         }
         button {
             background-color: #007bff;
@@ -57,20 +72,36 @@
         input[type=range] {
             width: 100%;
         }
+        .checkbox {
+            display: block;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
-    <!-- Banner for the game UI -->
-    <div class="banner">
-        <div id="score">Score: 0</div>
-        <div id="bestScore">Best Score: 0</div>
-        <button id="settingsButton">⚙️ Settings</button>
+    <!-- Start Screen -->
+    <div class="start-screen" id="startScreen">
+        <h2>Welcome to Catch the Ball!</h2>
+        <button id="startGameButton">Start Game</button>
+    </div>
+
+    <!-- Game Info (Score, Best Score, and Settings) -->
+    <div class="game-info">
+        <div>
+            <span id="score">Score: 0</span>
+            <span id="bestScore">Best Score: 105</span>
+        </div>
+        <button class="settings-button" id="settingsButton">Settings</button>
     </div>
 
     <!-- Settings Menu -->
     <div class="settings-menu" id="settingsMenu">
         <label for="speedControl">Ball Speed</label>
         <input type="range" id="speedControl" min="2" max="10" step="1" value="4">
+        <div class="checkbox">
+            <input type="checkbox" id="hardModeCheckbox">
+            <label for="hardModeCheckbox">Hard Mode</label>
+        </div>
         <button id="restartGame">Restart</button>
         <button id="resumeGame">Resume</button>
     </div>
@@ -93,6 +124,9 @@
 
         let ballSpeed = 4;
         let isPaused = false;
+        let isHardMode = false;
+        let gameStarted = false;
+
         let ball = {
             x: canvas.width / 2,
             y: canvas.height / 2,
@@ -107,7 +141,8 @@
             height: 20,
             x: canvas.width / 2 - 50,
             y: canvas.height - 40,
-            speed: 10
+            speed: 10,
+            dx: 0 // Change in x (for keyboard control)
         };
 
         let score = 0;
@@ -136,34 +171,34 @@
             ball.x += ball.dx;
             ball.y += ball.dy;
 
-    // Ball bouncing off walls
+            // Ball bouncing off walls
             if (ball.x + ball.radius > canvas.width || ball.x - ball.radius < 0) {
                 ball.dx *= -1;
-        // Randomly change the ball's vertical speed slightly
-                ball.dy += (Math.random() * 2 - 1); // Change by -1 to 1
-                ball.dy = Math.max(-10, Math.min(ball.dy, 10)); // Limit the speed change
             }
 
-    // Ball bouncing off top
+            // Ball bouncing off top
             if (ball.y - ball.radius < 0) {
                 ball.dy *= -1;
-        // Randomly change the ball's horizontal speed slightly
-                ball.dx += (Math.random() * 2 - 1); // Change by -1 to 1
-                ball.dx = Math.max(-100, Math.min(ball.dx, 10)); // Limit the speed change
             }
 
-    // Ball and paddle collision
+            // Ball and paddle collision
             if (
                 ball.y + ball.radius > paddle.y &&
-                ball.x > paddle.x &&
-                ball.x < paddle.x + paddle.width
+                ball.x > paddle.x && ball.x < paddle.x + paddle.width
             ) {
-                ball.dy *= -1;
+                ball.dy = -Math.abs(ball.dy); // Ensure the ball bounces upwards
+                ball.y = paddle.y - ball.radius; // Position the ball just above the paddle
                 score++;
                 document.getElementById('score').innerText = `Score: ${score}`;
+                
+                // Hard Mode: Increase ball speed as score increases
+                if (isHardMode && score % 5 === 0) {
+                    ball.dx *= 1.1;
+                    ball.dy *= 1.1;
+                }
             }
 
-    // Ball touches the bottom - Game Over
+            // Ball touches the bottom - Game Over
             if (ball.y + ball.radius > canvas.height) {
                 isGameOver = true;
                 checkBestScore();
@@ -179,11 +214,15 @@
             }
         }
 
-        function movePaddleTouch(event) {
-            let touchX = event.touches[0].clientX;
+        function movePaddle() {
+            paddle.x += paddle.dx;
 
             // Ensure paddle stays within the screen
-            paddle.x = Math.max(0, Math.min(touchX - paddle.width / 2, canvas.width - paddle.width));
+            if (paddle.x < 0) {
+                paddle.x = 0;
+            } else if (paddle.x + paddle.width > canvas.width) {
+                paddle.x = canvas.width - paddle.width;
+            }
         }
 
         function showSettingsMenu() {
@@ -197,14 +236,36 @@
         }
 
         function update() {
-            if (!isPaused && !isGameOver) {
+            if (!isPaused && !isGameOver && gameStarted) {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 drawBall();
                 drawPaddle();
                 moveBall();
+                movePaddle();
                 requestAnimationFrame(update);
             }
         }
+
+        // Keyboard controls
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'ArrowRight') {
+                paddle.dx = paddle.speed;
+            } else if (event.key === 'ArrowLeft') {
+                paddle.dx = -paddle.speed;
+            }
+        });
+
+        document.addEventListener('keyup', function(event) {
+            if (event.key === 'ArrowRight' || event.key === 'ArrowLeft') {
+                paddle.dx = 0;
+            }
+        });
+
+        // Touch control for mobile devices
+        canvas.addEventListener('touchmove', function(event) {
+            let touchX = event.touches[0].clientX;
+            paddle.x = Math.max(0, Math.min(touchX - paddle.width / 2, canvas.width - paddle.width));
+        });
 
         // Event Listener for restarting the game from settings
         document.getElementById('restartGame').addEventListener('click', function () {
@@ -233,11 +294,30 @@
             showSettingsMenu();
         });
 
-        // Touch control for mobile devices
-        canvas.addEventListener('touchmove', movePaddleTouch);
+        // Event Listener for hard mode toggle
+        document.getElementById('hardModeCheckbox').addEventListener('change', function (event) {
+            isHardMode = event.target.checked;
+        });
 
-        // Start the game
-        update();
+        // Start Game button event
+        document.getElementById('startGameButton').addEventListener('click', function () {
+            gameStarted = true;
+            document.getElementById('startScreen').style.display = 'none';
+            update();
+        });
+
+        // Start the game with the start screen visible
+        document.getElementById('startScreen').style.display = 'block';
+
+        // Start the game loop only when the start button is clicked
+        function initializeGame() {
+            if (!gameStarted) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+            }
+        }
+
+        // Keep initializing the game until it starts
+        initializeGame();
     </script>
 </body>
 </html>
