--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catch the Ball Game</title>
+    <meta property="og:title" content="Welcome to My Website!" />
+    <meta property="og:description" content="Discover the latest articles, news, and updates." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Alibek1234567/image1/main/20240929_220258.jpg" />
+    <meta property="og:url" content="https://alibek1234567.github.io/ballgameRA/" />
+    <meta property="og:type" content="website" />
+</body>
+</html>
     <style>
         body {
             margin: 0;
