--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Website!</title> <!-- Added title tag -->
     <meta property="og:title" content="Welcome to My Website!" />
     <meta property="og:description" content="Discover the latest articles, news, and updates." />
     <meta property="og:image" content="https://i.imgur.com/yc4Rjpn.png" />
     <meta property="og:url" content="https://alibek1234567.github.io/ballgameRA/" />
     <meta property="og:type" content="website" />
+</head>
+<body>
+    <!-- Your website content goes here -->
 </body>
 </html>
     <style>
