--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to My Website!</title> <!-- Added title tag -->
     <meta property="og:title" content="Welcome to My Website!" />
     <meta property="og:description" content="Discover the latest articles, news, and updates." />
-    <meta property="og:image" content="https://i.imgur.com/yc4Rjpn.png" />
+    <meta property="og:image" content="https://i.imgur.com/piA12ss.png" />
     <meta property="og:url" content="https://alibek1234567.github.io/ballgameRA/" />
     <meta property="og:type" content="website" />
 </head>
